<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:text="@string/Settings" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSettings"
        android:layout_below="@+id/btnSettings"
        android:text="@string/Play" />

    <ToggleButton
        android:id="@+id/btnMusic"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPlay"
        android:layout_below="@+id/btnPlay"
        android:checked="false"
        android:text="@string/Music"
        android:textOff="@string/MusicOff"
        android:textOn="@string/MusicOn" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnMusic"
        android:layout_below="@+id/btnMusic"
        android:text="@string/Exit" />

    <SeekBar
        android:id="@+id/MusicVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnMusic"
        android:max="100"
        android:progress="100"
        android:layout_toRightOf="@+id/btnMusic" />

</RelativeLayout>
